--- a/index.html
+++ b/index.html
@@ -85,6 +85,12 @@
                     <h2>Gelişim Hesaplama</h2>
                     <p>Sene başı değerine göre yıllık gelişimi yüzde olarak hesaplayın.</p>
                 </div>
+                <!-- YENİ EKLENEN KART -->
+                <div class="tool-card" data-tool="vadesiz_gelir">
+                    <i class="fa-solid fa-hand-holding-dollar fa-3x"></i>
+                    <h2>Vadesiz Gelir Etkisi Hesaplama</h2>
+                    <p>Vadesiz mevduatın ITR üzerinden gelir etkisini hesaplayın.</p>
+                </div>
             </div>
 
         </div>
