--- a/hesap_araclari/mevduat.html
+++ b/hesap_araclari/mevduat.html
@@ -1,3 +1,5 @@
+<!-- START OF FILE mevduat.html -->
+
 <!-- Ana kapsayıcıyı değiştirerek fark alanını da içermesini sağlıyoruz -->
 <div id="mevduat-hesaplayici" class="d-flex flex-column align-items-center">
 
@@ -30,14 +32,14 @@
                         <td data-result="brut-faiz">0,00 TL</td>
                     </tr>
                     <tr>
-                        <td>Stopaj Kesintisi (%15)</td>
+                        <!-- GÜNCELLENDİ: Stopaj etiketi dinamik hale getirildi -->
+                        <td data-label="stopaj-label">Stopaj Kesintisi</td>
                         <td data-result="stopaj">0,00 TL</td>
                     </tr>
                     <tr class="total-net">
                         <td>Net Faiz Getirisi</td>
                         <td data-result="net-faiz">0,00 TL</td>
                     </tr>
-                    <!-- YENİ: Vade sonu toplam tutar satırı -->
                     <tr class="vade-sonu-toplam">
                         <td>Vade Sonu Toplam Tutar</td>
                         <td data-result="toplam-tutar">0,00 TL</td>
@@ -73,14 +75,14 @@
                         <td data-result="brut-faiz">0,00 TL</td>
                     </tr>
                     <tr>
-                        <td>Stopaj Kesintisi (%15)</td>
+                        <!-- GÜNCELLENDİ: Stopaj etiketi dinamik hale getirildi -->
+                        <td data-label="stopaj-label">Stopaj Kesintisi</td>
                         <td data-result="stopaj">0,00 TL</td>
                     </tr>
                     <tr class="total-net">
                         <td>Net Faiz Getirisi</td>
                         <td data-result="net-faiz">0,00 TL</td>
                     </tr>
-                    <!-- YENİ: Vade sonu toplam tutar satırı -->
                     <tr class="vade-sonu-toplam">
                         <td>Vade Sonu Toplam Tutar</td>
                         <td data-result="toplam-tutar">0,00 TL</td>
@@ -99,10 +101,9 @@
 
 <script>
     (() => {
-        // ... (Önceki scriptin başı aynı kalacak) ...
         const container = document.getElementById('mevduat-hesaplayici');
         if (!container) return;
-        // ... (tüm değişken tanımlamaları aynı) ...
+        
         const hesaplaBtn1 = container.querySelector('#hesapla-btn-1');
         const karsilastirBtn1 = container.querySelector('#karsilastir-btn-1');
         const sonucTablo1 = container.querySelector('#mevduat-sonuc-1');
@@ -114,7 +115,7 @@
 
         let ilkNetGetiri = 0;
 
-        const STOPAJ_ORANI = 0.15;
+        // KALDIRILDI: const STOPAJ_ORANI = 0.15;
         
         const formatCurrency = (value) => value.toLocaleString('tr-TR', { style: 'currency', currency: 'TRY' });
         const parseFloatComma = (value) => parseFloat(String(value).replace(',', '.'));
@@ -132,25 +133,43 @@
 
         // --- HESAPLAMA MANTIĞI GÜNCELLENDİ ---
         const calculateMevduat = (tutar, vade, faiz) => {
-            if (!tutar || !vade || !faiz || isNaN(tutar) || isNaN(vade) || isNaN(faiz)) {
-                return { brutFaiz: 0, stopaj: 0, netFaiz: 0, toplamTutar: tutar || 0 };
+            if (!tutar || !vade || !faiz || isNaN(tutar) || isNaN(vade) || isNaN(faiz) || vade <= 0) {
+                return { brutFaiz: 0, stopaj: 0, netFaiz: 0, toplamTutar: tutar || 0, stopajOrani: 0 };
             }
+
+            // GÜNCELLENDİ: Vadeye göre dinamik stopaj oranı belirleme
+            let stopajOrani;
+            if (vade >= 1 && vade <= 180) {
+                stopajOrani = 0.175; // %17,5
+            } else if (vade >= 181 && vade <= 364) {
+                stopajOrani = 0.15;  // %15
+            } else if (vade >= 365) {
+                stopajOrani = 0.10;  // %10
+            } else {
+                stopajOrani = 0; // Geçersiz vade için (0 veya negatif)
+            }
+
             const brutFaiz = (tutar * faiz / 100 / 365) * vade;
-            const stopaj = brutFaiz * STOPAJ_ORANI;
+            const stopaj = brutFaiz * stopajOrani; // Dinamik oran kullanılıyor
             const netFaiz = brutFaiz - stopaj;
-            const toplamTutar = tutar + netFaiz; // YENİ
-            return { brutFaiz, stopaj, netFaiz, toplamTutar };
+            const toplamTutar = tutar + netFaiz;
+            return { brutFaiz, stopaj, netFaiz, toplamTutar, stopajOrani }; // Hesaplanan oran da döndürülüyor
         };
 
         // --- SONUÇ GÜNCELLEME FONKSİYONU GÜNCELLENDİ ---
         const updateResults = (tableElement, results) => {
+            // GÜNCELLENDİ: Stopaj etiketi, hesaplanan orana göre güncelleniyor
+            const stopajLabel = tableElement.querySelector('[data-label="stopaj-label"]');
+            const stopajYuzde = (results.stopajOrani * 100).toLocaleString('tr-TR');
+            stopajLabel.textContent = `Stopaj Kesintisi (%${stopajYuzde})`;
+
             tableElement.querySelector('[data-result="brut-faiz"]').textContent = formatCurrency(results.brutFaiz);
             tableElement.querySelector('[data-result="stopaj"]').textContent = formatCurrency(results.stopaj);
             tableElement.querySelector('[data-result="net-faiz"]').textContent = formatCurrency(results.netFaiz);
-            tableElement.querySelector('[data-result="toplam-tutar"]').textContent = formatCurrency(results.toplamTutar); // YENİ
+            tableElement.querySelector('[data-result="toplam-tutar"]').textContent = formatCurrency(results.toplamTutar);
         };
 
-        // --- OLAY DİNLEYİCİLER (Değişiklik yok, sadece içeriği aynı kalacak) ---
+        // --- OLAY DİNLEYİCİLER (Değişiklik gerekmiyor) ---
         hesaplaBtn1.addEventListener('click', () => {
             const tutar = parseFormattedNumber(container.querySelector('#tutar-1').value);
             const vade = parseInt(container.querySelector('#vade-1').value);
@@ -197,3 +216,4 @@
         });
     })();
 </script>
+<!-- END OF FILE mevduat.html -->
