--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                 <!-- DEĞİŞİKLİK: Yeni hesaplama aracı kartı buraya eklendi -->
                 <div class="tool-card" data-tool="net_gelir_ongoru">
                     <i class="fa-solid fa-file-invoice-dollar fa-3x"></i>
-                    <h2>Net Gelir Öngörü</h2>
+                    <h2>Net Gelir Öngörü Hesaplama</h2>
                     <p>Aylık faiz ve faiz dışı gelir öngörülerini hesaplayın.</p>
                 </div>
             </div>
